# icms-atc-pi

./: .env.example  README.md  icms.xlsx  pyproject.toml  requirements.txt
src/atc/: README.md  automacao_sefaz_pi.py  configuracoes.py
src/atc/navegacao/: __init__.py  acoes_pagina.py
src/difal/: README.md  __init__.py  automacao_sefaz_pi.py  configuracoes.py
src/icms_pi/: __init__.py  configuracoes.py  excel_filiais.py  gui_app.py  logger.py
src/normal/: README.md  automacao_sefaz_pi.py  configuracoes.py
src/sefaz_pi/: __init__.py  automacao_sefaz_pi.py  configuracoes.py  excel_filiais.py  gui_app.py  logger.py  main.py
src/sefaz_pi/navegacao/: __init__.py  acoes_pagina.py
